--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>If you have any questions, inqueries or if you simply wish to connect, please email me below and I will reply shortly.</p>
-									<form method="POST" action="https://formsubmit.co/mauro.alvarez.jr0@gmail.com">
+									<form method="POST" action="https://formsubmit.co/b5778c980de6383a3fcff158a900261c">
 										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required/></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required/></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" required/></div>
 											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6" required></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
