--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://github.com/MauroAlvarez1997" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/mauro-v-alvarez/" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mauro-v-alvarez/" class="icon brands fa-linkedin" target="_blank"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
 			</section>
