target blank to all

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://github.com/MauroAlvarez1997" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/MauroAlvarez1997" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/mauro-v-alvarez/" target="_blank" class="icon brands fa-linkedin" ><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
@@ -53,7 +53,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p><a href="https://drive.google.com/file/d/18ga-FadJxRLhSqTj7ZkjqQEBOuWfyDG2/view?usp=sharing">RESUME</a></p>
+										<p><a href="https://drive.google.com/file/d/18ga-FadJxRLhSqTj7ZkjqQEBOuWfyDG2/view?usp=sharing" target="_blank">RESUME</a></p>
 									</header>
 									<p>Hello! As a former math teacher, I'm now pursuing a career as a software engineer, bringing my love for problem-solving and creating new things to this exciting field. I have a strong foundation in programming languages like Java and Python, experience with software development methodologies such as Agile and Scrum, and expertise in data structures and algorithms. When I'm not coding, I like to stay active by taking my dog on long walks and practicing Muay Thai, which challenges me both mentally and physically. As a lifelong learner, I'm always eager to acquire new skills and stay up-to-date with emerging technologies, and I'm excited to see where my software engineering journey takes me next.</p>
 								</div>
@@ -134,21 +134,21 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
-											<a href="https://stashapp.onrender.com/" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://stashapp.onrender.com/" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>StashApp</h4>
 												<p>Allows users to create protected accounts, perform full CRUD actions on payment methods and transactions between 100% of users in the database</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://midcupid-no60.onrender.com/" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://midcupid-no60.onrender.com/" target="_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>MidCupid</h4>
 												<p>Led a team of 4 to develop a full-stack dating app clone using hypothesis driven development, allowing users to create accounts, set over 50 different preferences, like/unlike other users, and view a list of both likes and matches</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://airbnb-personal-project.onrender.com/" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://airbnb-personal-project.onrender.com/" target="_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Maubnb</h4>
 												<p>Imitated Airbnb’s wireframe and functionality, creating a website that allows users to create, update and delete accounts, locations, reviews, and bookings, giving it ~90% of Airbnb’s actual functionality</p>
