--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
 										<article>
 											<a href="https://stashapp.onrender.com/" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>StashApp</h4>
+												<h4>StashApp (<a href="https://github.com/MauroAlvarez1997/StashApp" target="_blank">Github</a>)</h4>
 												<p>Allows users to create protected accounts, perform full CRUD actions on payment methods and transactions between 100% of users in the database</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://midcupid-no60.onrender.com/" target="_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>MidCupid</h4>
+												<h4>MidCupid (<a href="https://github.com/ChrisE1911/python_project" target="_blank">Github</a>)</h4>
 												<p>Led a team of 4 to develop a full-stack dating app clone using hypothesis driven development, allowing users to create accounts, set over 50 different preferences, like/unlike other users, and view a list of both likes and matches</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://airbnb-personal-project.onrender.com/" target="_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Maubnb</h4>
+												<h4>Maubnb (<a href="https://github.com/MauroAlvarez1997/API-project" target="_blank">Github</a>)</h4>
 												<p>Imitated Airbnb’s wireframe and functionality, creating a website that allows users to create, update and delete accounts, locations, reviews, and bookings, giving it ~90% of Airbnb’s actual functionality</p>
 											</div>
 										</article>
