--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 											<a href="https://stashapp.onrender.com/" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>StashApp (<a href="https://github.com/MauroAlvarez1997/StashApp" target="_blank">Github</a>)</h4>
-												<p>Allows users to create protected accounts, perform full CRUD actions on payment methods and transactions between 100% of users in the database</p>
+												<p>StashApp allows users to create protected accounts, perform full CRUD actions on payment methods and transactions between 100% of users in the database</p>
 											</div>
 										</article>
 										<article>
