--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 											<a href="https://midcupid-no60.onrender.com/" target="_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>MidCupid (<a href="https://github.com/ChrisE1911/python_project" target="_blank">Github</a>)</h4>
-												<p>Led a team of 4 to develop a full-stack dating app clone using hypothesis driven development, allowing users to create accounts, set over 50 different preferences, like/unlike other users, and view a list of both likes and matches</p>
+												<p>Led a team of 4 to develop a full-stack dating app clone using hypothesis driven development, allowing users to create accounts, set over 50 different preferences, like/unlike other users, and view a list of people you both liked and matched with</p>
 											</div>
 										</article>
 										<article>
