--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											<a href="https://airbnb-personal-project.onrender.com/" target="_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Maubnb (<a href="https://github.com/MauroAlvarez1997/API-project" target="_blank">Github</a>)</h4>
-												<p>Imitated Airbnb’s wireframe and functionality, creating a website that allows users to create, update and delete accounts, locations, reviews, and bookings, giving it ~90% of Airbnb’s actual functionality</p>
+												<p>First full stack project where I imitated Airbnb’s wireframe and functionality, creating a website that allows users to create, update and delete accounts, locations, reviews, and bookings, giving it ~90% of Airbnb’s actual functionality</p>
 											</div>
 										</article>
 									</div>
