--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>If you have any questions, inqueries or if you simply wish to connect, please email me below and I will reply shortly.</p>
+									<p>If you have any questions, inqueries or if you simply wish to connect, please email me below and I will reply as soon as posible.</p>
 									<form method="POST" action="https://formsubmit.co/b5778c980de6383a3fcff158a900261c">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required/></div>
