--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Mauro Alvarez</a></h1>
-					<p>Software Engineer<br />
+					<p>Software Developer/Engineer<br />
 					</p>
 				</header>
 				<nav id="nav">
