--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
